--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>Angular Form</title>
   <script src="app\lib\angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
-  <!--<script src="app\lib\angular-route.min.js"></script>-->
+  <!--<script src="app\lib\angular-route.min.js"></script>
+ten plik nie działa
+-->
   <script src="app\app.js"></script>
   <link rel="stylesheet" href="css/main.css">
 </head>
