--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Angular Form</title>
   <script src="app\lib\angular.min.js"></script>
+  <script src="app\lib\angular-route.min.js"></script>
+  <script src="app\lib\angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
   <!--<script src="app\lib\angular-route.min.js"></script>
 ten plik nie działa
